--- a/examples/visualizer/index.html
+++ b/examples/visualizer/index.html
@@ -1,6 +1,29 @@
 <html>
   <head>
     <title>Simple use case example for react2tree</title>
+    <style type="text/css">
+
+      .node {
+        cursor: pointer;
+      }
+
+      .nodeCircle {
+        stroke: black;
+        stroke-width: 1.5px;
+      }
+
+      .nodeText {
+        font-family: sans-serif;
+        font-size: 10px;
+      }
+
+      .link {
+        fill: none;
+        stroke: #ccc;
+        stroke-width: 1.5px;
+      }
+
+    </style>
   </head>
   <body>
     <div id="root">
